2001-12-03  Sam Hartman  <hartmans@mit.edu>

	* README: s-pty_init_ets/pty_init/

2001-10-18  Ezra Peisach  <epeisach@mit.edu>

	* sane_hostname.c (pty_make_sane_hostname): Do not declare addrbuf
	twice, shadowing the first declaration.


2001-10-02  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (includes): Depend on
	$(BUILDTOP)/include/krb5/autoconf.h. Automatic dependencies do not
	work on systems in which shared libraries are build without static
	ones.

2001-09-11  Tom Yu  <tlyu@mit.edu>

	* configure.in: Cosmetic fix in utmpx.ut_exit check.

Wed Sep  5 20:08:21 2001  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in ($(BUILDTOP)/include/krb5/autoconf.h): Add rules to
 	build include/krb5/autoconf.h - this file is wiped out during a
 	make clean and sane_hostname.c depends on it.

2001-08-29  Ken Raeburn  <raeburn@mit.edu>

	* sane_hostname.c: Include socket-utils.h and fake-addrinfo.c.
	(FAI_PREFIX): Define to krb5int_pty.
	(sockaddrlen, do_ntoa): Deleted.
	(pty_make_sane_hostname): Use socklen instead of sockaddrlen.
	Delete support for not having getnameinfo.  Move code for do_ntoa
	inline.

2001-07-02  Tom Yu  <tlyu@mit.edu>

	* update_utmp.c (pty_update_utmp): Remember to chop off leading
	"/dev/" for the non-sysV case.  Handle lseek() returning non-zero
	yet non-negative values (it usually does... :-), so that we can
	actually write somewhere not at the beginning of the utmp file if
	necessary.

2001-06-28  Ken Raeburn  <raeburn@mit.edu>

	* update_utmp.c (pty_update_utmp): Don't copy host if it's a null
	pointer.

	* dump-utmp.c (print_ut): Use size of ut_name field, not ut_user,
	which may not exist, for width when printing ut_name field value.
	Specify width when printing hostname, it may be unterminated.
	(main): Move utp and utxp declarations closer to their usages, and
	make both conditionalized so they're not declared if they're not
	used.

2001-06-21  Ezra Peisach  <epeisach@mit.edu>
